--- a/package.json
+++ b/package.json
@@ -14,23 +14,31 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.test\\.ts$ --testPathIgnorePatterns=\\.int\\.test\\.ts$",
     "test:int": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\\.int\\.test\\.ts$",
     "lint": "eslint src",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "index-guidelines": "node --loader ts-node/esm src/react_agent/preprocessing/index_guidelines.ts"
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.1",
-    "@langchain/community": "^0.3.1",
-    "@langchain/core": "^0.3.3",
+    "@langchain/community": "^0.3.26",
+    "@langchain/core": "^0.3.29",
     "@langchain/langgraph": "^0.2.8",
-    "langchain": "^0.3.2"
+    "@langchain/openai": "^0.3.17",
+    "@types/pdf-parse": "^1.1.4",
+    "@types/uuid": "^10.0.0",
+    "chromadb": "^1.10.3",
+    "dotenv": "^16.4.5",
+    "langchain": "^0.3.12",
+    "pdf-parse": "^1.1.1",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.9.1",
     "@tsconfig/recommended": "^1.0.7",
     "@types/jest": "^29.5.0",
+    "@types/node": "^22.10.7",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
-    "dotenv": "^16.4.5",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -39,6 +47,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
