--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "langchain": "^0.3.12",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
